--- a/template_src/www/css/index.css
+++ b/template_src/www/css/index.css
@@ -105,3 +105,15 @@ h1 {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
 }
+
+/* Country Individual Pages ======================== */
+
+.desc-card {
+    background: #eee;
+    border-radius: 5px;
+    border: #ddd;
+    padding: 15px;
+    margin: 15px;
+    color: #303030;
+
+}
