--- a/template_src/www/css/index.css
+++ b/template_src/www/css/index.css
@@ -97,8 +97,20 @@ h1 {
 
 }
 
+/* BUTTONS */
+
 ons-button.button {
     background: #9CC22C;
+}
+
+.btn-primary {
+    background-color: #9CC22C;
+    padding: 10px 15px;
+    border-radius: 16px;
+    border:none;
+    font-size: 1em;
+    font-weight: 500;
+    text-transform: uppercase;
 }
 
 /* PREVENTION */
@@ -134,3 +146,35 @@ tr.h2 {
 .covid-svg {
     width: 80%;
 }
+
+/* MODAL */
+
+.modal-container {
+  background: #eee;
+  color: #252525;
+  top: 50%;
+  left: 50%;
+  padding: 20px;
+  margin: 20px;
+
+  border-radius: 5px;
+  text-align: left;
+  font-size: 14px;
+  border-bottom: 1px solid #ccc;
+}
+
+.h2-border {
+    border-bottom: 1px solid #9CC22C;
+}
+
+.modal-head {
+    font-weight: 700;
+
+}
+
+.modal > p {
+  font-size:16px;
+}
+
+
+
