--- a/template_src/www/css/index.css
+++ b/template_src/www/css/index.css
@@ -42,8 +42,8 @@ body {
 }
 
 h1 {
-     font-family: system-ui, -apple-system, -apple-system-font, 'Poppins', sans-serif;
-     font-size: 24px;
+    font-family: system-ui, -apple-system, -apple-system-font, 'Poppins', sans-serif;
+    font-size: 24px;
     font-weight: normal;
     margin: 0px;
     overflow: visible;
@@ -53,23 +53,67 @@ h1 {
 
 ons-button.button {
     background: linear-gradient(45deg, rgba(255, 116, 75, 1) -10%, rgba(255, 45, 106, 1) 70%);
-
     border-radius: 50px;
     padding: 5px 15px;
-
+    justify-content: center;
+    align-items: center;
+    display: inline-block;
+    margin: 0 auto;
 }
+
+ons-button.btn-link1 {
+    background: rgb(20, 208, 131);
+    background: linear-gradient(53deg, rgba(20, 208, 131, 1) 0%, rgba(62, 240, 142, 1) 100%);
+    border-radius: 10px;
+    padding: 5px 30px 5px 30px;
+    margin: 0 14px;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: 'Poppins', sans-serif;
+    text-transform: initial;
+}
+
+ons-button.btn-link2 {
+    background: transparent;
+    border-radius: 10px;
+    padding: 5px 30px 5px 30px;
+    margin: 0 14px;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: 'Poppins', sans-serif;
+    text-transform: initial;
+}
+
+ons-input.pref-input {
+    padding-bottom: 30px;
+    border-bottom: red;
+}
+
+.text-input--underbar {
+    color: red;
+}
+
+.btn-space {
+    background-color: rgba(255, 255, 255, .06);
+    margin: 10px auto;
+    /* text-align: center; */
+    padding: 30px 20px;
+    border-radius: 10px;
+    max-width: 90%;
+}
+
 
 /* ONBOARDING */
 
-#first > .page__content {
+#first>.page__content {
     background: #eee !important;
 }
 
-#second > .page__content {
+#second>.page__content {
     background: #eee !important;
 }
 
-#third > .page__content {
+#third>.page__content {
     background: #eee !important;
 }
 
@@ -78,27 +122,27 @@ ons-button.button {
     color: #24333F;
 }
 
-.onboard-container > h1 {
+.onboard-container>h1 {
     font-size: 18px;
     text-transform: none;
     text-align: left;
 }
 
 .onboard-svg {
-     width: 300px;
-     padding: 25% 0 2% 0%;
-     margin: 0 auto;
+    width: 300px;
+    padding: 25% 0 2% 0%;
+    margin: 0 auto;
 }
 
-    .learn-svg {
-        padding-top: 40%;
-    }
+.learn-svg {
+    padding-top: 40%;
+}
 
 .onboard-text {
     font-size: 14px;
     text-transform: none;
-
 }
+
 
 /* SIGNUP */
 
@@ -106,26 +150,26 @@ ons-button.button {
     margin: 10px 5px;
 }
 
-.input-signup > label {
+.input-signup>label {
     font-size: 12px;
     font-weight: 700;
-
 }
 
 .agreeTerms {
     font-size: 12px;
     text-transform: none;
-    margin:5px;
+    margin: 5px;
 }
 
 #create-account {
     text-transform: none;
     font-size: 18px;
-} 
+}
 
 .submit-button {
     margin-top: 15px;
 }
+
 #skipSignup {
     margin: 10px;
     text-decoration: underline;
@@ -137,6 +181,7 @@ ons-button.button {
     color: #252525;
     text-transform: none;
 }
+
 
 /* PREVENTION */
 
@@ -215,7 +260,7 @@ tr.h2 {
 
 .todomain2 {
     background: rgb(20, 208, 131);
-    background: linear-gradient(180deg, rgba(20, 208, 131, 1) 0%, rgba(62, 240, 142, 1) 100%);
+    background: linear-gradient(180deg, rgb(17, 224, 138) 0%, rgb(57, 218, 129) 100%);
     border-radius: 10px;
     box-shadow: 0 0 16px -6px rgba(0, 0, 0, 0.3);
     display: flex;
